# HCIPanel

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/: CMakeLists.txt
components/include/: app_config.h  app_gatts.h  app_gpio.h  app_nvs.h  http_ota_wrapper.h  lv_port_disp.h  sock_client.h  socket_wrapper.h  wifi_sta.h  wifi_wrapper.h
components/lvgl/: lv_conf.h
components/lvgl/src/core/: lv_indev.c  lv_refr.c
components/lvgl/src/draw/: lv_draw_img.c
components/lvgl/src/extra/libs/sjpg/: lv_sjpg.c
components/lvgl/src/widgets/: lv_img.c
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_i2c/: i2c_manager.c
components/lvgl_esp32_drivers/lvgl_tft/: GC9A01.c  disp_spi.c  esp_lcd_backlight.c  hx8357.c  il3820.c  ili9163c.c  ili9481.c  ili9486.c  ili9488.c  ili9488.h  pcd8544.c  sh1107.c  st7735s.c  st7789.c  st7796s.c
components/lvgl_esp32_drivers/lvgl_touch/: ft6x36.c
components/src/: app_gatts.c  app_gpio.c  app_nvs.c  http_ota_wrapper.c  lv_port_disp.c  sock_client.c  socket_wrapper.c  wifi_sta.c  wifi_wrapper.c
main/: main.c
